Relationship tables finished + auth fixed + excpetions fixed
