# EntitiesAPI/spring-server/src/main/resources/entities-api-spec.yaml
@@ -72,7 +72,7 @@ paths:
           description: "The movie id that needs to be fetched"
           required: true
           type: "integer"
-          format: "int64"
+          format: "int32"
       produces:
         - "application/json"
       responses:
@@ -93,7 +93,7 @@ paths:
           description: "The movie id that needs to be deleted"
           required: true
           type: "integer"
-          format: "int64"
+          format: "int32"
       responses:
         200:
           description: "Successful operation"
@@ -114,7 +114,7 @@ paths:
           description: "Movie id that needs to be edited"
           required: true
           type: "integer"
-          format: "int64"
+          format: "int32"
         - in: "body"
           name: "movie"
           description: "Movie object that needs to be edited"
@@ -182,7 +182,7 @@ paths:
           description: "The screening id that needs to be fetched"
           required: true
           type: "integer"
-          format: "int64"
+          format: "int32"
       produces:
         - "application/json"
       responses:
@@ -203,7 +203,7 @@ paths:
           description: "The screening id that needs to be deleted"
           required: true
           type: "integer"
-          format: "int64"
+          format: "int32"
       responses:
         200:
           description: "Successful operation"
@@ -224,7 +224,7 @@ paths:
           description: "Screening id that needs to be edited"
           required: true
           type: "integer"
-          format: "int64"
+          format: "int32"
         - in: "body"
           name: "screening"
           description: "Screening object that needs to be edited"
@@ -292,7 +292,7 @@ paths:
           description: "The cinema id that needs to be fetched"
           required: true
           type: "integer"
-          format: "int64"
+          format: "int32"
       produces:
         - "application/json"
       responses:
@@ -313,7 +313,7 @@ paths:
           description: "The cinema id that needs to be deleted"
           required: true
           type: "integer"
-          format: "int64"
+          format: "int32"
       responses:
         200:
           description: "Successful operation"
@@ -334,7 +334,7 @@ paths:
           description: "Cinema id that needs to be edited"
           required: true
           type: "integer"
-          format: "int64"
+          format: "int32"
         - in: "body"
           name: "cinema"
           description: "Cinema object that needs to be edited"
@@ -352,7 +352,7 @@ definitions:
     properties:
       movie_id:
         type: "integer"
-        format: "int64"
+        format: "int32"
       title:
         type: "string"
       release_date:
@@ -377,10 +377,16 @@ definitions:
     properties:
       screening_id:
         type: "integer"
-        format: "int64"
+        format: "int32"
       user_id:
         type: "integer"
-        format: "int64"
+        format: "int32"
+      movie_id:
+        type: "integer"
+        format: "int32"
+      cinema_id:
+        type: "integer"
+        format: "int32"
       time:
         type: "string"
       room:
@@ -392,9 +398,12 @@ definitions:
   ScreeningManage:
     type: "object"
     properties:
-      user_id:
+      cinema_id:
         type: "integer"
-        format: "int64"
+        format: "int32"
+      movie_id:
+        type: "integer"
+        format: "int32"
       time:
         type: "string"
       room:
@@ -408,7 +417,7 @@ definitions:
     properties:
       cinema_id:
         type: "integer"
-        format: "int64"
+        format: "int32"
       name:
         type: "string"
       city:
